--- a/Frontend/lenskart/package.json
+++ b/Frontend/lenskart/package.json
@@ -11,17 +11,19 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.3",
     "firebase": "^9.17.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.1",
+    "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
     "redux-thunk": "^2.4.2",
     "slick-carousel": "^1.8.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "server": "json-server --watch db.json --port 3004",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
