--- a/Frontend/lenskart/package.json
+++ b/Frontend/lenskart/package.json
@@ -22,6 +22,7 @@
     "react-slick": "^0.29.0",
     "redux-thunk": "^2.4.2",
     "slick-carousel": "^1.8.1",
+    "swiper": "^9.0.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
